Bug 100288 - clover unable to run OpenCL kernels since 03127bb radeonsi: compile all TGSI compute shaders asynchronously
Summary: clover unable to run OpenCL kernels since 03127bb radeonsi: compile all TGSI ...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: All All
: medium blocker
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-20 15:52 UTC by Vedran Miletić
Modified: 2017-03-21 01:21 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vedran Miletić 2017-03-20 15:52:34 UTC
Piglit's cl-custom-run-simple-kernel just waits endlessly. Bisected to:

commit 03127bb6d5454002b3d9c3a542f3ff1a5f1e91d9
Author: Marek Olšák <marek.olsak@amd.com>
Date:   Sun Mar 5 01:14:51 2017 +0100

    radeonsi: compile all TGSI compute shaders asynchronously
    
    required by threaded gallium
    
    Reviewed-by: Timothy Arceri <tarceri@itsqueeze.com>
Comment 2 Vedran Miletić 2017-03-21 01:21:57 UTC
Confirmed fixed by: https://cgit.freedesktop.org/mesa/mesa/commit/?id=827ae79b2c6cf53e26b3467e4c3965ce6acab3c6 (slight correction in SHA1)

Thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.